--- a/style.css
+++ b/style.css
@@ -1,5 +1,142 @@
 body{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 20px;
+}
 
-    background-color: grey;
+.topo{
 
+    background-color: #333;
+
+}
+
+.topo > a{
+
+    display: inline-block;
+    margin: 10px;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+
+}
+
+.topo > a:hover{
+
+    color: #ff1717;
+
+}
+
+.Intro > h4{
+
+    font-size: 50px;
+    font-style: italic;
+    text-decoration: underline;
+
+}
+
+.Intro > img {
+
+    height: 700px;
+    width: 700px;
+    margin-bottom: -60px;
+    margin-top: 5%;
+
+}
+
+.OqVendemos{
+
+    margin-bottom: 70px;
+
+}
+
+.Produtos > img{
+
+    height: 400px;
+    width: 400px;
+    margin: 20px;
+    transition: 300ms;
+
+}
+
+.Produtos > img:hover{
+
+    height: 410px;
+    width: 410px;
+
+}
+
+.Cards img{
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    border-radius: 130px;
+}
+
+/* Estilo geral do footer */
+footer {
+    background-color: #333; /* Define a cor de fundo do rodapé como cinza escuro */
+    color: white; /* Define a cor do texto como branco */
+    padding: 40px 0; /* Adiciona um espaço interno de 40 pixels na parte superior e inferior */
+    font-family: Arial, sans-serif; /* Define a fonte como Arial ou qualquer fonte sem serifa */
+}
+
+footer-container {
+    display: flex; /* Transforma os elementos filhos em elementos flexíveis */
+    justify-content: space-between; /* Distribui os elementos filhos com espaço igual entre eles */
+    flex-wrap: wrap; /* Permite que os elementos filhos quebrem para a próxima linha se não houver espaço suficiente */
+    max-width: 1200px; /* Define a largura máxima do container */
+    margin: 0 auto; /* Centraliza o container horizontalmente */
+    padding: 0 20px; /* Adiciona um espaço interno de 20 pixels nas laterais */
+}
+
+.footer-section {
+    flex-basis: 23%; /* Define a largura inicial de cada seção como 23% */
+    margin-bottom: 20px; /* Adiciona um espaço abaixo de cada seção */
+    justify-content: center;
+}
+
+footer-section h4 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: #ff6347;
+    
+}
+
+footer-section ul li a:hover {
+    color: #ff6347;
+}
+
+.social-links a {
+    display: inline-block;
+    margin-right: 10px;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s;
+   
+}
+
+.social-links a:hover {
+    color: #000000;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 0;
+    border-top: 1px solid #ff0000;
+    font-size: 14px;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 0;
+    border-top: 1px solid #2717ba90;
+    font-size: 14px;
+}
+
+.footer-bottom p {
+    margin: 0;
 }
